--- a/O.R/4.integer_programming.md
+++ b/O.R/4.integer_programming.md
@@ -1,4 +1,4 @@
-# <center> 整数规划与分配问题
+# 整数规划与分配问题
 ## 整数规划问题的提出
 所谓整数规划：
 **决策变量要求取整数**的线性规划
@@ -99,3 +99,4 @@ $$
    5. 对所有 **没有** ✔的行画一条横线，对所有 **有** ✔的列画纵线，由此得到覆盖所有0元素的最小直线集合
 4. 进行调整（对矩阵进行变换，其目的是增加0元素）
    - 对直线 **未覆盖区** 的所有元素减去它们中的 **最小数**；**覆盖区的==交叉元素==** 加上刚才的最小数，其他元素不变，转向步骤 2 继续操作
+
