--- a/O.R/5.goal_programming.md
+++ b/O.R/5.goal_programming.md
@@ -1,4 +1,4 @@
-# <center> 目标规划
+# 目标规划
 重点掌握目标规划模型的建立
 ## 目标规划问题的提出
 线性规划在处理实际问题时的局限性
@@ -80,3 +80,4 @@ $$
 
 ## 求解目标规划的层次算法
 根据目标规划求解思路是从搞优先级到低优先级逐层优化的原则，为保证较低层级优化在较高层级优化范围内进行，可将上一层次目标的优化值作为约束，加到下一层次的模型中。
+
