--- a/O.R/6.Graph_and_Network_analysis.md
+++ b/O.R/6.Graph_and_Network_analysis.md
@@ -1,4 +1,4 @@
-# <center> 图与网络分析
+# 图与网络分析
 ## 图的基本概念与模型
 P.S. 只列一些陌生概念（为什么图的概念会有这么多版本😅无语住了）
 - **次**：与某一个点 $v_i$ 相关联的边的数目称为点 $v_i$ 的次（degree），也叫做 **度**，记作 $d(v_i)$ 
@@ -165,3 +165,4 @@ $$
    3. 对 $f_{ij} = 0$ 的弧 $(i,j)$，在增广链中只能为正向弧，故在 $W(j_k)$ 中只画出弧 $(i,j)$，其权数值为 $b_{ij}$。
 3. 在加权网络 $W(f_k)$ 中，寻找费用最小的增广链，也即求从 $s \to t$ 的最短路，并将该增广链上流量调整至允许的最大值，得到一个新的流量 $f_{k+1}(>f_k)$。
 4. 重复第二、三两步，直至网络 $W(f_{k+m})$ 中找不到增广链（也即找不出最短路）时，$f_{k+}$ 即为要寻找的最小费用流。
+
