--- a/Network/1.overview.md
+++ b/Network/1.overview.md
@@ -1,3 +1,29 @@
 # 第1章 概述
 
+## 计算机网络在信息时代的作用
 
+常见的网络分为三大类：
+- 电信网络
+- 有线电视网络
+- 计算机网络
+
+其中 **计算机网络** 是核心
+
+互联网即因特网，是 *Internet* 的译名
+
+> [!Attention]
+> 注意区分 Internet 和 internet
+> - internet：是一个通用名词，泛指多个计算机网络互连而成的网络
+> - Internet：是一个专用名词，特指因特网--世界上最大的计算机网络
+
+互联网的两个基本特点：
+- 连通性
+- 共享性
+
+互联网+：指的是 互联网 + 各个传统行业
+
+## 互联网概述
+
+> 网络的网络
+
+计算机网络由 **多个**
