--- a/Network/1.overview.md
+++ b/Network/1.overview.md
@@ -24,6 +24,56 @@
 
 ## 互联网概述
 
-> 网络的网络
+### 网络的网络
 
-计算机网络由 **多个**
+计算机网络由 **多个结点和连接结点的链路** 组成。结点可以是 **计算机、集线器或路由器** 等
+网络之间可以通过 **路由器** 互连起来，构成 **网络的网络**，称为 **互联网**
+
+- 网络将许多计算机连接在一起
+- 互联网则把网络通过路由器连在一起
+
+与网络相连的计算机称为 **主机**
+
+### 互联网基础结构发展的三个阶段
+
+因特网发展的三个阶段
+- **第一阶段**：从单个网络 *ARPANET* 向互联网发展的过程。1983 年 *TCP/IP* 协议成为 *ARPANET* 上的标准协议。
+- **第二阶段**：建成三级结构的因特网：主干网、地区网和校园网（或企业网）。
+- 形成多层次的ISP（*Internet Service Provider* 因特网服务提供者）结构的因特网
+
+> [!tip]
+> ISP（*Internet Service Provider* 因特网服务提供者）
+> 
+> 常见的如中国电信、中国移动和中国联通都是 *ISP*
+> 
+> 上网就是指接入到互联网。主机必须有 *IP* 地址才能上网。
+> *ISP* 从互联网管理机构申请到很多 *IP* 地址，同时拥有通信线路及路由器等联网设备。
+> 用户向 *ISP* 交纳费用获得所需 *IP* 地址的使用权，然后就可以通过该 *ISP* 接入互联网。
+> 
+> 互联网由全球无数的 ISP 所共同拥有。
+> **万维网**（WWW） 是基于互联网开发的一种信息共享服务，浏览网址一般使用的就是万维网，而邮件等就没有用到万维网。
+
+### 互联网标准化工作
+
+标准的分类
+- **法定标准**：由权威机构指定的正式的、合法的标准，如 *OSI*
+- **事实标准**：某些公司的产品在竞争中占据主流，时间长了这些产品中的协议和技术就成了标准，如 *TCP/IP*
+
+> *RFC（request for comments）*
+
+*RFC* 是因特网标准的形式，*RFC* 要上升为因特网正式标准的四个阶段：
+1. **因特网草案（*Internet Draft*）**：这个阶段还不是 *RFC* 文档
+2. **建议标准（*Proposed Standard*）**：这个阶段开始正式成为 *RFC* 文档
+3. **草案标准（*Draft Standard*）**：将 *RFC* 文档交由 *IETF* 和 *IAB* 进行审核，已将取消此步骤
+4. **因特网标准（*Internet Standard*）**
+
+> 标准化工作的相关组织
+
+- 国际标准化组织 *ISO*：*OSI* 参考模型，*HDLC* 协议
+- 国际电信联盟：指定通信规则
+- 国际电气电子工程师协会 *IEEE*：学术机构，*IEEE802* 系列标准，*5G* 协议的制定
+- *Internet* 工程任务组 *IETF*：复制因特网相关标准的制定，*RFC xxx*
+
+## 互联网的组成
+
+互联网按照工作方式划分为 **边缘部分** 和 **核心部分**
