--- a/Network/1.overview.md
+++ b/Network/1.overview.md
@@ -257,4 +257,130 @@ $$
 
 ## 计算机网络体系结构
 
+### 协议与划分层次
+
+两个概念
+- **网络协议** （协议）：为进行网络中的数据交换而建立的规则、标准或约定
+- **计算机网络体系结构**：计算机网络各层及其协议的集合
+
+> 网络协议三要素
+>
+> **语法**：数据与控制信息的结构或格式
+> 
+> **语义**：需要发出何种控制信息，完成何种动作以及做出何种响应
+> 
+> **同步**：事件实现顺序的详细说明
+
+分层的优点：
+- 各层之间是 **独立** 的：某一层不需要知道下一层如何实现，只需要知道接口提供的服务
+- **灵活性高**：当一层发生变化时，只要保证接口不变，就能方便修改
+- **结构上可分割**：各层可以采用最合适的方式实现
+- 易于 **实现** 和 **维护**：这种结构使实现和调试一个庞大复杂的系统更容易，因为整个系统以被分解成若干相对独立的子系统
+- 促进 **标准化**：因每层的功能及其提供的服务都已经精确说明
+
+各层需要完成的工作包括以下一种或多种：
+- **差错控制**：使得对应层次对等方的通信更可靠
+- **流量控制**：发送端的发送速率必须使接收端来得及接收
+- **分段和重装**：发送端将要发送的数据块划分为更小单位，在接收端将其还原
+- **复用和分用**：发送端几个高层会话复用一条底层的连接，在接收端再进行分用
+- **连接建立和释放**：交换数据前先建立一条逻辑连接，数据传送结束后释放连接
+
+### 具有五层协议的体系结构
+
+不同体系结构如下图所示
+
+![体系结构](images/体系结构.png)
+
+> 应用层
+
+任务：通过 **应用进程** 间的交互来完成特定网络应用，应用层协议定义的是 **应用进程间通信和交互** 的规则
+
+常见应用层协议：
+- 域名系统 *DNS*
+- 支持万维网应用的 *HTTP* 协议
+- 支持电子邮件的 *SMTP* 协议
+- ...
+
+应用层交互的数据单元称为 **报文**
+
+> 运输层
+
+任务：负责向两台主机中 **进程之间的通信提供通用的数据传输服务**，应用进程利用该服务传送应用层报文；通用指多种应用可以使用同一运输层服务；有 **复用** 和 **分用** 功能
+
+> [!tip]
+> **复用** 和 **分用**
+> 
+> - **复用**：多个应用层进程可同时使用下面运输层的服务
+> - **分用**：运输层把收到的信息分别交付上面应用层中的相应进程
+
+两种主要协议：
+- **传输控制协议** *TCP*：提供 **面向连接的**、**可靠的** 数据传输服务。数据传输的单位是 **报文段**
+- **用户数据报协议** *UDP*：提供 **无连接的**、**尽最大努力的** 数据传输服务，不保证数据传输的可靠性。数据传输的单位是 **用户数据报**
+
+> 网络层
+
+任务：**负责为分组交换网上不同主机** 提供通信服务。在发送数据时，网络层把运输层产生的报文段或用户数据报 **封装成分组或包进行传送**；选择合适路由，使运输层传下来的分组能通过网络中的路由器找到目的主机
+
+协议：
+- *TCP/IP* 体系中，**网络层使用 *IP* 协议**，因此分组也叫 *IP* **数据报**，或简称数据报，但注意这与用户数据报不同。
+- 互联网使用 **无连接的网际协议** *IP*。
+- 多种路由选择协议
+
+> [!tip]
+> 无论哪一层的数据单元，都可以笼统地用 “**分组**” 来表示。
+
+> 数据链路层
+
+任务：将网络层交下来的 *IP* 数据报组装成 **帧**，在 **两个相邻结点的链路上** 传送 **帧**。
+
+每一帧包括 **数据和必要的控制信息**（包括同步信息、地址信息、差错控制等）。
+
+> 物理层
+
+任务：考虑用多大电压代表0或1，如何识别对方发送的比特；确定电缆插头的物理结构。
+
+物理层的传输单位是 **比特**
+
+数据在各层之间的传递过程如下图所示
+
+![传递过程](images/数据传递.png)
+
+对上图解析：
+
+第5层、第4层、第3层分别为数据加上了属于本层的控制信息，都位于首部。第2层的控制信息分为两部分加到了首部和尾部。
+
+对等层次间的数据单位称为该层的 **协议数据单元**。
+
+**在路由器中**，**分组上升到第3层**，过程中每一层都根据控制信息进行必要的操作并将该控制信息剥去。在第三层根据首部中的目的地址查找路由器中的转发表，找出转发分组的接口，然后依次加上新的控制信息下降到第1层，将数据发送出去。
+
+上图可以发现网际层的控制信息用于整个网络，而链路层的控制信息仅用于两个节点之间。路由器只到第3层。
+
+### 实体、协议、服务和服务访问点
+
+- **实体**：表示任何可发送或接受信息的 **硬件或软件进程**；很多情况下，实体就是一个特点的软件模块
+- **协议**：控制两个或多个 **对等实体** 进行通信的规则的集合
+- **服务**：由 **下层向上层** 通过层间接口提供的功能
+- **服务访问点**：在同一系统相邻两层的时间进行交互的地方，实际上就是一个 **逻辑接口**
+
+> [!tip]
+> 协议与服务
+> 
+> 在协议的控制下，两个 **对等实体间** 的通信使得本层能够向上一层提供服务。要实现本层协议，还需要使用下面层提供的服务
+> 
+> **协议** 是"**水平的**"，即协议是控制对等实体间通信的规则，**服务** 是"**垂直的**"，即服务是由下层向上层通过接口提供的
+
+### TCP/IP体系结构
+
+技术的发展不严格遵循分层概念，事实上现在某些应用程序可以直接使用 *IP* 层甚至网络接口层，如下图。
+
+![tcpip](images/tcpip.png)
+
+*TCP/IP* **协议族** 中的多种协议如下所示：
+
+![tcpip协议](images/tcpip协议.png)
+
+*TCP/IP* 协议可为各式各样的应用提供服务(*everthing over IP*)；*TCP/IP* 也允许 *IP* 协议在各式各样的网络构成的互联网上运行(*IP over everthing*)
+
+ 
+
 
