--- a/Network/2.physical_layer.md
+++ b/Network/2.physical_layer.md
@@ -134,4 +134,144 @@ $$
 - **非引导型**：
   - 电磁波无线传输
 
+## 信道复用技术
+
+> 信道复用技术：
+> 
+> 多个发送端受用同一条信道来传输信息
+> 
+> 发送端使用复用器将不同的信息结合起来传输，接收端使用分用器将信息分开
+
+### 频分复用、时分复用和统计时分复用
+
+> **频分复用** *FDM*
+
+原理：用户在分配到一定频带后，在通信过程中自始至终都占用这个频带
+
+特点：所有用户在同样的时间占用不同的频率带宽
+
+![频分复用](images/频分复用.png)
+
+> **时分复用** *TDM*
+
+原理：将时间划分为一段段等长的时分复用帧(TDM帧)，每个时分复用的用户在每一个TDM帧中占用固定序号的时隙
+
+特点：所有用户在不同的时间占用同样的频带宽度
+
+![时分复用](images/时分复用.png)
+
+> **统计时分复用** *STDM*
+
+ 原理：使用STDM帧来传送复用的数据，每一个STDM帧中的时隙数小于连接在集中器上的用户数；各用户有数据就发往集中器的输入缓存，集中器按顺序依次扫描输入缓存，把缓存中的输入数据放入STDM帧中，没有数据的缓存就跳过，当一个帧放满即发送，因此STDM帧不是固定分配时隙，而是按需动态分配时隙
+
+某用户占用的时隙不是周期性出现的，因此统计时分复用又称为异步时分复用；而时分复用又称为同步时分复用
+
+![统计时分复用](images/统计时分复用.png)
+### 波分复用
+
+**波分复用** *WDM* 就是 **光的频分复用**
+一根光纤上可以复用几十路甚至更多的光载波信号。光信号传输一定距离后会衰减，因此需要使用 **光纤放大器** 放大后继续传输。
+
+### 码分复用
+
+**码分复用** *CDM*：不同用户使用不同码型，在同样时间使用同样的频带通信。
+
+原理：各个用户使用经过特殊挑选的不同码型，因此彼此之间不会互相干扰
+
+**码片**：每一个比特时间划分为 *m* 个短的间隔，称为码片
+
+工作方式：每个站被指派一个 **唯一的** $m bit$ 码片
+- 若发送1，则发送自己的 $m bit$ 码片
+- 若发送0，则发送该码片的 **二进制反码**
+
+码片实现扩频：由于一个比特可转换成m个比特的码片，因此实际发送数据率提高了m倍
+
+重要特点：**每个站的码片必须各不相同，并相互正交**
+
+> [!tip]
+> 码片正交关系：不同码片正交，就是向量S和T的规格化内积为0，（规格化内积即对应为相乘）
+>
+> 正交关系的重要特征：任何码片与自己的规格化内积为1，与自己反码的规格化内积为-1
+
+> 例子：
+> 
+> 共有四个站进行码分多址通信，四个站的码片序列分别为
+>
+> A(-1-1-1+1+1-1+1+1)        B(-1-1+1-1+1+1+1-1)
+>
+> C(-1+1-1+1+1+1-1-1)        D(-1+1-1-1-1-1+1-1)
+>
+> 现收到这样的码片:(-1+1-3+1-1-3+1+1)，问哪些站发送了数据，发送的是0还是1
+>
+> 解：
+>
+> A站的内积：(-1-1-1+1+1-1+1+1)*(-1+1-3+1-1-3+1+1)/8=(+1-1+3+1-1+3+1+1)/8=1
+>
+> B站的内积：(-1-1+1-1+1+1+1-1)*(-1+1-3+1-1-3+1+1)/8=(+1-1-3-1-1-3+1-1)/8=-1
+>
+> C站的内积：(-1+1-1+1+1+1-1-1)*(-1+1-3+1-1-3+1+1)/8=(+1+1+3+1-1-3-1-1)/8=0
+>
+> D站的内积：(-1+1-1-1-1-1+1-1)*(-1+1-3+1-1-3+1+1)/8=(+1+1+3-1+1+3+1-1)/8=1
+>
+> 所以A、D站发送了1，B站发送了0，C站没有发送
+
+## 数字传输系统
+
+早期数字传输系统的缺点：
+- 速率标准不统一
+- 并非同步传输
+
+现代传输网络的传输媒体：**光纤**
+
+**同步光纤网** *(SONET)*：各级时钟都来自一个非常精确的主时钟，为光纤传输系统定义了同步传输的线路速率等级结构
+
+**同步数字系列** *(SDH)*：由sonet为基础发展的国际标准
+
+## 宽带接入技术
+
+用户连接到互联网，要先连接到某个 *ISP*，以便获得上网所需的 *IP* 地址。
+
+**宽带接入网** 是接入网的一种，即一种用来把用户接入到互联网的网络。
+
+宽带接入可分为 **有线宽带接入** 和 **无线宽带接入**。
+
+### ADSL技术
+
+**非对称数字用户线** *ADSL* 技术是用数字技术对现有的模拟电话用户线进行改造，使其能够承载宽带数字业务。
+
+标准模拟电话信号的频带在 $300~3400Hz$ 范围，*ADSL* 技术将 $4000Hz$ 以下的频带留给传统电话，$4000Hz$ 以上用于上网。
+
+因为用户一般都是下载，*ADSL* 的下行带宽（从 *ISP* 到用户）远大于上行带宽，所以叫做非对称。
+
+*ADSL* 的好处是可以利用现有的电话线，缺点是传输距离有限，并且不能保证固定的数据率。*ADSL* 的速率依赖于用户线的质量、长度、线径等。
+
+*ADSL* 在用户线（铜线）的两端各安装一个 *ADSL* 解调器。采用 **基于频分复用的** *DMT* **调制技术**，将 $4kHz$ 以上的频带划分为许多子信道，其中 25 个子信道用于上行，249 个子信道用于下行。
+
+类似 *ADSL* 还有许多其他 *xDSL* 技术，速度更快，但在国内应用较少。
+
+### 光纤同轴混合网(HFC网)
+
+**光纤同轴混合网** *（HFC网）* 是基于有线电视网开发的一种宽带接入网。
+
+为提高传输的可靠性和质量，*HFC* 网将原有线电视网的同轴电缆主干部分改换为了光纤。
+
+光纤从头端连接到光纤结点，在光纤结点处光信号转换为电信号，连接到一个光纤结点的典型用户数为500。
+
+光纤节点与头端的典型距离为 25km，到用户的距离不超过 3km。
+
+![HFC](images/SFC.png)
+
+用户通过电缆调制解调器来使用 *HFC* 网，它比 *ADSL* 中的解调器复杂很多，因为要解决共享信道中的冲突问题。
+
+使用 *HFC* 网的数据率大小不确定，它取决于这段电缆上有多少个用户正在传送数据，如果有很多人在用，每个人的速率会很慢。
+
+### FTTx技术
+**光纤到户** *FTTH(Fiber To The Home)* 是把光纤一直铺设到用户家庭，在光纤进入用户家中后才把光信号转换为电信号，这样的上网速率最快。
+
+现在信号在陆地上的长距离传输基本都是使用的光缆，在 *ADSL* 和 *HFC* 中长距离传输也是用的光缆。
+
+多个用户通过光配线网共享一根光纤干线，光配线网使用波分复用，上行和下行使用不同的波长。
+
+出光纤到户 *FTTH* 外，还有光纤到大楼 *FTTB*，光纤到楼层 *FTTF* 等，一般运行商所说的光纤到户并非真正的 *FTTH*。
+
 
