--- a/Network/3.data_link_layer.md
+++ b/Network/3.data_link_layer.md
@@ -161,3 +161,189 @@
 
 ![ppp协议状态图](images/ppp协议状态图.png)
 
+## 使用广播信道的数据链路层
+
+广播信道可以进行 **一对多的通信**，局域网使用的就是广播信道
+
+**局域网** 可以按照拓扑结构进行如下分类
+
+![局域网分类](images/局域网分类.png)
+
+### 局域网的数据链路层
+
+局域网的最主要 **特点**：**网络为一个单位所拥有**，**且地理范围和站点数目都有限**。
+
+局域网的 **优点**：
+- 具有广播功能，可以从一个站点很方便地访问全网。局域网上的主机可以共享连接在局域网上的各种硬件和软件资源。
+- 便于系统的扩张和逐渐演变
+- 提高了系统的可靠性、可用性和生存性。
+
+> 以太网是局域网的一种，绝大多数局域网都是以太网。双绞线是局域网中的主流传输媒体。
+
+实现共享信道的两种方式：
+- 静态划分信道：如频分复用、时分复用、码分复用等，但 **不适合局域网**。
+- **动态媒体接入控制**，又称 **多点接入**。特点是信道并非在用户通信时固定分配给用户。
+  - **随机接入**：特点是用户可以随机地发送消息。如果有两个用户同时发送，在共享媒体上就会产生碰撞，是发送失败。这时就需要解决碰撞的网络协议，即 *CSMA/CD* 协议。
+  - **受控接入**：特点是用户不能随机发送信息而必须服从一定的控制。
+
+> 以太网应用的主要是随机接入
+
+#### 适配器
+
+计算机与外界局域网的连接是通过适配器进行的，适配器以前又称网卡。
+
+适配器和局域网之间的通信通过电缆或双绞线以 **串行传输** 方式进行的，而适配器与计算机之间的通信是通过 *I/O* 总线 **并行传输** 的，因此 **适配器的一个重要功能就是进行数据串行传输和并行传输的转换**。
+
+适配器实现的功能包含了数据链路层和物理层两个层次的功能。
+
+适配器收到正确的帧后，使用中断来通知计算机，并把数据交付给协议栈中的网络层。当计算机要发送 *IP* 数据报时，就由协议栈把分组交给适配器，适配器将其组装成帧后发送到局域网。（**封装成帧**、**透明传输**、**差错检错** 等功能都是由 **适配器** 完成的）
+
+计算机的 **硬件地址存储在适配器中**，而 **软件地址-- IP 地址存储在计算机中**
+
+![适配器通信](images/适配器通信.png)
+
+### CSMA/CD协议
+
+局域网中的计算机常被称为 **工作站**、**站点**等
+
+以太网采取以下两种措施简便通信：
+1. 采用较为灵活的无连接的工作方式，即不必建立连接就可以直接发送数据。适配器对发送的数据帧不编号，也不要求对方发回确认。它提供的是尽最大努力的交付，是不可靠的交付。对有差错帧是否进行重传由高层来决定。
+   - 同一时间只能有一台计算机发送数据，如果发生冲突，就使用 *CSMA/CD* 协议来协调。
+2. 以太网发送的数据使用的是 **曼彻斯特编码**
+
+#### CSMA/CD 协议要点
+
+1. **多点接入**：多点接入说明是 **总线型网络**，许多计算机以多点接入的方式连接在一根总线上。**协议的实质就是载波监听和碰撞检测**。
+2. **载波监听**：使用电子技术检测信道上有没有其他计算机也在发送。不管是发送前还是发送中，每个站都要不停地检测信道。
+3. **碰撞检测**：**边发送边监听**。如果几个站同时发送数据，总线上的信号电压变化会增大，就表明发生了碰撞。这时就立即停止发送。
+
+在使用 *CSMA/CD* 协议时，不能同时发送和接收，因此使用 *CSMA/CD* 协议的以太网只能进行 **半双工通信**（**双向交替通信**）。
+
+**发生碰撞** 是因为传播时延，A 发送了数据但是还没传到 B 处，B 就不知道有人发送了数据。
+
+当 A 和 B 同时发送数据产生碰撞后，他们发送数据都失败，都要推迟一段时间重新发送。
+
+因为不知道是否会发生碰撞，所以以太网存在发送的不确定性。
+
+A 发送数据后最多 $2\theta$ 时间就知道是否碰撞，这 $2\theta$ 时间称为争用期。如果经过争用期还没碰撞，表明发送成功。
+
+如果发生碰撞，以太网使用 **截断二指数退避算法** 来确定碰撞后重传的时机。
+
+以太网规定了争用期的时长，这就约束了以太网的地理范围不能太大，不然传播时延会超过争用期限制。
+
+以太网规定最短帧长为 64 字节（一个争用期可以发送的字节数），如果争用期发生碰撞就会停止发送，因此信道上长度小于 64 字节的帧就是无效帧。
+
+碰撞后除了立即停止发送数据外还要继续发送一个人为干扰信号，通知所有用户现在发生了碰撞。
+
+以太网还规定了 **帧间最小间隔** 96 比特时间，这是为了使刚收到数据帧的栈清理缓存，准备接收下一帧。
+
+![碰撞检测](images/碰撞检测.png)
+
+#### CSMA/CD 协议要点归纳
+
+1. **准备发送**：适配器从网络层获得一个分组，加上首部和尾部组成以太网帧，放入适配器缓存中。在发送前先检测信道。
+2. **检测信道**：若检测到信道忙，则不停地检测直到信道空闲。若检测到空闲，并在 96 比特时间内保持空闲（保证了帧间最小间隔），就发送这个帧。
+3. 在发送过程中仍不停地检测，即适配器要 **边发送边监听**。这时有两种情况
+   - **发送成功**：争用期内一直未检测到碰撞。发送成功后回到 1。
+   - **发送失败**：争用期内检测到碰撞，立即停止发送，并按规定发送人为干扰信号。适配器接着执行 **指数退避算法**，等待足够时间后回到 2。若重传 16 次仍不成功，就停止重传并向上报错。
+
+以太网发送完一帧后要把已发送的帧保留一下。如果争用期检测到碰撞，推迟一段时间后还要重传。
+
+### 使用集线器的星形拓扑
+
+**集线器** 特点：
+- 表面上使用集线器的局域网在物理上是一个星形网，但是 **在逻辑上仍是一个总线网**，各站共享逻辑上的总线，还是使用 CSMA/CD 协议。
+- 一个集线器有很多接口，像是一个多接口的转发器。
+- 集线器工作在物理层，每个接口仅负责转发比特，不进行碰撞检测。
+
+![集线器](images/集线器.png)
+
+### 以太网的信道利用率
+
+以太网信道的利用率：由于会发生碰撞，实际利用率达不到100%
+
+成功发送一个帧占用信道的时间：$T_0+\tau$
+
+> [!tip]
+> 设参数 $a = \tau / T_0$  (**单程端到端时延** $\tau$ 与 **帧的发送时间** $T_0$ 之比)
+> 
+> $a\to 0$ 表示一发生碰撞就能立即检测出来并停止发送，而 *a* 越大，争用期占比越大，使信道利用率降低
+> 
+> 因此 *a* 的值越小越好；当数据率一定时，以太网连线的长度受到限制，同时以太网的帧长不能太短
+
+**极限信道利用率** *Smax*：
+$$
+Smax=\frac{T_0}{T_0+\tau}=\frac{1}{1+a}
+$$
+
+**只有参数 *a* 远小于1才能得到尽可能高的极限信道利用率**
+
+### 以太网的 MAC 层
+
+### MAC地址
+
+定义：又叫 **物理地址** 或 **硬件地址**；就是适配器的标识符，用48位二进制数来标识网卡的硬件地址，表示为6个16进制数，在局域网内具 有 **唯一性**
+
+- *I/G* 位：地址字段第一个字节的最低位；为0表示单个站地址、为1表示组地址，用来进行多播
+- *G/L* 位：地址字段第一个字节的最低第二位；为0表示全球管理、为1表示本地管理
+
+> 适配器的过滤功能：适配器收到MAC帧后检查帧中目的地址，若发往本站则收下，否则丢弃
+
+局域网中适配器收到的 **帧** 有三种：
+- **单播帧**：一对一，即收到的帧的MAC地址与本站的硬件地址相同
+- **广播帧**：一对全体，即发送给本局域网上所有站点的帧(全1地址)
+- **多播帧**：一对多，即发送给本局域网上一部分站点的帧
+
+以太网适配器有一种特殊的工作方式：**混杂方式**。混杂方式的适配器只要”听到“有帧再传输就悄悄接收下来。
+
+混杂方式可以用来监视和分析以太网上的流量，黑客也常用混杂方式非法获取信息。
+
+#### MAC 帧格式
+
+![mac帧格式](images/mac帧格式.jpg)
+
+各字段含义：
+- **类型**：用来标志上一层使用的是什么协议
+- **数据**：长度在46~1500字节
+- **FCS**：帧检验序列，使用 *CRC* 检验
+
+**填充字段**：当数据字段长度小于46字节时，*MAC* 子层会在数据字段后面加入一个整数字节的填充字段，以保证 *MAC* 帧长不小于64字节
+
+**插入的8字节**：
+- 从 *MAC* 子层传到物理层时要在帧前插入8字节，由硬件生成
+- **前同步码**：7字节；使接收端的适配器在接收 *MAC* 帧时能迅速调整时钟频率，使其和发送端时钟同步
+- **帧开始定界符**：定义为10101011；用来表示帧开始
+
+无效的 *MAC* 帧：
+- 帧的长度不是整数个字节
+- 用收到的帧检验序列 *FCS* 查出差错
+- 收到的帧的 *MAC* 客户数据长度不在46~1500字节之间，或 *MAC* 帧长度不在64~1518
+
+## 扩展以太网
+
+物理扩展：集线器、光纤
+
+### 在数据链路层扩展以太网
+
+**网桥**：对收到的帧根据MAC帧目的地址查找地址表进行转发和过滤
+
+**交换机**：工作在数据链路层，实质就是一个多接口网桥
+- 特点：交换机上的主机是全双工工作，不会产生冲突，交换机中存有地址表通过自学习算法建立，交换机上所有端口在同一个广播域上
+
+帧转发方式：
+- **直通**：收到帧之后直接转发，不必事先把整个数据帧缓存，但也不对帧进行检验
+- **存储转发**：将所有帧都收到后进行检查，然后再发送
+
+交换机的自学习功能：
+
+地址表的形成：收到未知的地址后，存储源地址和接口的对应关系，向除来源端口的其它端口广播，目的地址不符则丢弃，否则接收并回复，收到回复后存储对应关系；地址表有有效时间，超过有效时间则失效
+
+生成树协议STP：解决无限循环的问题
+
+### 虚拟局域网
+
+**虚拟局域网**（*VLAN*）：是一些局域网网段构成的与物理位置无关的逻辑组
+
+*VLAN* **标记**：在MAC帧的源地址和类型间插入4字节的 *VLAN* 标记，交换机收到帧后只向所属 *VLAN* 转发，而不进行广播
+
+最大帧长变为1522字节(1518+4)
